--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Hola güey</title>
   </head>
   <body>
-    <div id="app"><h1>hola mundo!</h1></div>
+    <h1>Avocado Market</h1>
+    <div id="app"></div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
